学习完CSS动画

--- a/CSS3学习/CSS动画/index.html
+++ b/CSS3学习/CSS动画/index.html
@@ -59,7 +59,7 @@
         animation-duration: 6s;
         animation-timing-function: ease-in;
         animation-delay: 2s;
-        animation-fill-mode: div;
+        animation-fill-mode: both;
         animation-iteration-count: 2;
         animation-direction: alternate;
         animation-play-state: running;
